--- a/app/src/main/res/layout/activity_edit_details.xml
+++ b/app/src/main/res/layout/activity_edit_details.xml
@@ -1,13 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_edit_details"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.google.pramodbs.collegehelper.EditDetails">
 
-</RelativeLayout>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollvw"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:id="@+id/titlefield"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter following Details"
+            android:textSize="10pt">
+        </TextView>
+
+        <EditText
+            android:id="@+id/namefield"
+            android:layout_height="wrap_content"
+            android:hint="Enter full name"
+            android:layout_width="fill_parent">
+        </EditText>
+
+        <EditText
+            android:id="@+id/rollno"
+            android:layout_height="wrap_content"
+            android:hint="Enter Roll No."
+            android:layout_width="fill_parent">
+        </EditText>
+
+        <EditText
+            android:id="@+id/regno"
+            android:layout_height="wrap_content"
+            android:hint="Enter Reg No."
+            android:inputType="number"
+            android:layout_width="fill_parent">
+        </EditText>
+
+        <Spinner
+            android:id="@+id/SpinnerBranch"
+            android:layout_height="wrap_content"
+            android:prompt="@string/branch_prompt"
+            android:layout_width="match_parent">
+        </Spinner>
+
+        <Spinner
+            android:id="@+id/SpinnerYear"
+            android:layout_height="wrap_content"
+            android:prompt="@string/year_prompt"
+            android:layout_width="match_parent">
+        </Spinner>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show Available Courses"
+            android:id="@+id/savebtn"/>
+
+        <TextView
+            android:id="@+id/core"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CORE Courses"
+            android:textSize="10pt">
+        </TextView>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c1"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c2" />
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c3"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c4"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c5"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/c6"/>
+
+        <TextView
+            android:id="@+id/elective"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ELECTIVE Courses"
+            android:textSize="10pt">
+        </TextView>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ce1"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ce2" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:id="@+id/regbtn"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:id="@+id/logoutbtn"/>
+
+    </LinearLayout>
+</ScrollView>
