--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,6 +26,21 @@
             android:layout_width="fill_parent">
         </EditText>
 
+        <EditText
+            android:id="@+id/rollno"
+            android:layout_height="wrap_content"
+            android:hint="Enter Roll No."
+            android:layout_width="fill_parent">
+        </EditText>
+
+        <EditText
+            android:id="@+id/regno"
+            android:layout_height="wrap_content"
+            android:hint="Enter Reg No."
+            android:inputType="number"
+            android:layout_width="fill_parent">
+        </EditText>
+
         <Spinner
             android:id="@+id/SpinnerBranch"
             android:layout_height="wrap_content"
@@ -45,6 +60,14 @@
             android:layout_height="wrap_content"
             android:text="Show Available Courses"
             android:id="@+id/savebtn"/>
+
+        <TextView
+            android:id="@+id/core"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CORE Courses"
+            android:textSize="10pt">
+        </TextView>
 
         <CheckBox
             android:layout_width="match_parent"
@@ -75,6 +98,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/c6"/>
+
+        <TextView
+            android:id="@+id/elective"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ELECTIVE Courses"
+            android:textSize="10pt">
+        </TextView>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ce1"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ce2" />
 
         <Button
             android:layout_width="match_parent"
