--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.google.pramodbs.collegehelper.MainActivity">
 
-
     <TextView
-        android:text="Not yet registered ? Sign Up here"
-        android:id="@+id/txtview"
-        android:layout_width="wrap_content"
+        android:textSize="30dp"
+        android:text="User LogIn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/display"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/loginbutton"
-        android:layout_alignBottom="@+id/loginbutton"
-        android:layout_toRightOf="@+id/loginbutton"
-        android:layout_toEndOf="@+id/loginbutton"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp" />
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:hint="Enter your Login ID"
+        android:id="@+id/email"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -34,39 +42,23 @@
         android:layout_alignLeft="@+id/email"
         android:layout_alignStart="@+id/email" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="82dp"
-        android:hint="Enter your Login ID"
-        android:id="@+id/email"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:text="Login"
         android:id="@+id/loginbutton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/password"
         android:layout_alignLeft="@+id/password"
         android:layout_alignStart="@+id/password" />
 
-    <TextView
-        android:textSize="30dp"
-        android:text="User LogIn"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/display"
-        android:layout_marginTop="25dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+
+    <TextView
+        android:text="Not yet registered ? Sign Up here"
+        android:id="@+id/txtview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"/>
+
+</LinearLayout>
