--- a/app/src/main/res/layout/activity_on_login.xml
+++ b/app/src/main/res/layout/activity_on_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_on_login"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.google.pramodbs.collegehelper.OnLoginActivity">
 
     <Button
@@ -15,18 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp"
         android:id="@+id/newreg" />
 
     <Button
-        android:text="Edit Details"
+        android:text="Re-Register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/newreg"
-        android:layout_alignLeft="@+id/newreg"
-        android:layout_alignStart="@+id/newreg"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="25dp"
         android:id="@+id/edit" />
-</RelativeLayout>
+</LinearLayout>
