--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollvw"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -9,7 +17,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.google.pramodbs.collegehelper.MainActivity">
+    tools:context="com.google.pramodbs.collegehelper.MainActivity"
+    android:background="@drawable/clg"
+    android:backgroundTintMode="screen">
 
     <TextView
         android:textSize="30dp"
@@ -19,7 +29,8 @@
         android:id="@+id/display"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#00FA00"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -29,7 +40,9 @@
         android:hint="Enter your Login ID"
         android:id="@+id/email"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -40,7 +53,9 @@
         android:id="@+id/password"
         android:layout_below="@+id/email"
         android:layout_alignLeft="@+id/email"
-        android:layout_alignStart="@+id/email" />
+        android:layout_alignStart="@+id/email"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"/>
 
     <Button
         android:text="Login"
@@ -50,15 +65,17 @@
         android:layout_marginTop="25dp"
         android:layout_below="@+id/password"
         android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password" />
-
-
+        android:layout_alignStart="@+id/password"
+        android:textColor="#FFFFFF"
+        android:background="#808080"/>
 
     <TextView
         android:text="Not yet registered ? Sign Up here"
         android:id="@+id/txtview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textColor="#FF0000" />
 
 </LinearLayout>
+</ScrollView>
