--- a/app/src/main/res/layout/activity_on_login.xml
+++ b/app/src/main/res/layout/activity_on_login.xml
@@ -28,7 +28,7 @@
         android:id="@+id/newreg" />
 
     <Button
-        android:text="Edit Registration "
+        android:text="Edit details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/newreg"
@@ -44,14 +44,6 @@
         android:id="@+id/view" />
 
     <Button
-        android:text="See Attendance "
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/newreg"
-        android:layout_marginTop="25dp"
-        android:id="@+id/seeatt" />
-
-    <Button
         android:text="Logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="All CORE Courses are COMPULSORY ! If not selected,they'll get auto-selected !"/>
+        android:text=""/>
 
 </LinearLayout>
 
