--- a/app/src/main/res/layout/activity_edit_details.xml
+++ b/app/src/main/res/layout/activity_edit_details.xml
@@ -16,119 +16,58 @@
             android:id="@+id/titlefield"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter following Details"
-            android:textSize="10pt">
+            android:text="Details Entered "
+            android:textSize="12.5pt"
+            android:textColor="#000000">
         </TextView>
 
-        <EditText
+        <TextView
             android:id="@+id/namefield"
             android:layout_height="wrap_content"
-            android:hint="Enter full name"
-            android:layout_width="fill_parent">
-        </EditText>
+            android:layout_width="fill_parent"
+            android:textSize="10pt">
+        </TextView>
 
-        <EditText
+        <TextView
             android:id="@+id/rollno"
             android:layout_height="wrap_content"
-            android:hint="Enter Roll No."
-            android:layout_width="fill_parent">
-        </EditText>
+            android:layout_width="fill_parent"
+            android:textSize="10pt">
+        </TextView>
 
-        <EditText
+        <TextView
             android:id="@+id/regno"
             android:layout_height="wrap_content"
-            android:hint="Enter Reg No."
             android:inputType="number"
-            android:layout_width="fill_parent">
-        </EditText>
+            android:layout_width="fill_parent"
+            android:textSize="10pt">
+        </TextView>
 
-        <Spinner
-            android:id="@+id/SpinnerBranch"
+        <TextView
+            android:id="@+id/Branch"
             android:layout_height="wrap_content"
-            android:prompt="@string/branch_prompt"
-            android:layout_width="match_parent">
-        </Spinner>
+            android:layout_width="match_parent"
+            android:textSize="10pt">
+        </TextView>
 
-        <Spinner
-            android:id="@+id/SpinnerYear"
+        <TextView
+            android:id="@+id/Year"
             android:layout_height="wrap_content"
-            android:prompt="@string/year_prompt"
-            android:layout_width="match_parent">
-        </Spinner>
+            android:layout_width="match_parent"
+            android:textSize="10pt">
+        </TextView>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Review Courses"
+            android:text="Proceed to Register again"
             android:id="@+id/savebtn"/>
 
-        <TextView
-            android:id="@+id/core"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CORE Courses"
-            android:textSize="10pt">
-        </TextView>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c1"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c2" />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c3"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c4"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c5"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/c6"/>
-
-        <TextView
-            android:id="@+id/elective"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ELECTIVE Courses"
-            android:textSize="10pt">
-        </TextView>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ce1"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ce2" />
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
-            android:id="@+id/regbtn"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Logout"
-            android:id="@+id/logoutbtn"/>
+            android:text="Go back"
+            android:id="@+id/backbtn"/>
 
     </LinearLayout>
 </ScrollView>
